RESOLVED FIXED161235
[Win] Warning fix.
https://bugs.webkit.org/show_bug.cgi?id=161235
Summary [Win] Warning fix.
Per Arne Vollan
Reported 2016-08-26 04:40:09 PDT
YarrPattern::errorMessage has inconsistent dll linkage.
Attachments
Patch (1.05 KB, patch)
2016-08-26 04:44 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2016-08-26 04:44:24 PDT
Brent Fulgham
Comment 2 2016-08-26 08:43:48 PDT
Comment on attachment 287100 [details] Patch Good catch! r=me.
Per Arne Vollan
Comment 3 2016-08-26 09:30:03 PDT
Thanks for reviewing!
WebKit Commit Bot
Comment 4 2016-08-26 09:52:02 PDT
Comment on attachment 287100 [details] Patch Clearing flags on attachment: 287100 Committed r205020: <http://trac.webkit.org/changeset/205020>
WebKit Commit Bot
Comment 5 2016-08-26 09:52:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.