[Win] Compile fix. https://bugs.webkit.org/show_bug.cgi?id=161235

Reviewed by Brent Fulgham.

YarrPattern::errorMessage has inconsistent dll linkage.

* yarr/YarrPattern.h:


Canonical link: https://commits.webkit.org/179396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205020 268f45cc-cd09-0410-ab3c-d52691b4dbfc