Source/JavaScriptCore/yarr/YarrPattern.h
@@ -324,7 +324,7 @@ struct YarrPattern {
         NumberOfErrorCodes
     };
     
-    WTF_EXPORT_PRIVATE static const char* errorMessage(ErrorCode);
+    JS_EXPORT_PRIVATE static const char* errorMessage(ErrorCode);
 
     void reset()
     {
